--- a/content/posts/2018-09-18-dear-moon.md
+++ b/content/posts/2018-09-18-dear-moon.md
@@ -1,7 +1,6 @@
 ---
 title: Dear Moon
-layout: OGLink
+layout: LinkPost
 date: 2018-09-18T04:01:52.349Z
 link: 'https://youtu.be/7wrk5u8FgbM'
 ---
-
